--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
 
     <div class="container">
-      <h1 class="text-center">Grecian Delights</h1>
-      <h1 class="text-center">Catering</h1>
+      <h1 class="text-center">Grecian Delights Catering</h1>
       <h2 class="text-center">For all your catering needs</h2>
       <h4 class="text-center">We stick with tradition and make it like Yia Yia!</h4>
       <div class="text-center">Georgia Stavrou, Entrepreneur</div>
