--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Halvah</h5>
-                  <p class="card-text">This is a classic village salad commonly served as part of any meal and is made from delicious cucumbers, Nut-filled farina cream pastry with homemade syrup and topped with maraschino cherries.</p>
+                  <p class="card-text">Nut-filled farina cream pastry with homemade syrup and topped with maraschino cherries.</p>
                   <p class="card-text"><small class="text-muted">$70.00 (½ sheet-12x20) Serves a party of 24</small></p>
                 </div>
               </div>
